--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="alx-right-wrap">
           <div class="alx-social-links">
             <ul>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a href="#"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.instagram.com/mindfulness_withsara/"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="tel:00989033913261"><i class="fa fa-mobile"></i></a></li>
+              <li><a href="mailto:sara.tafakh@gmail.com"><i class="fa fa-inbox"></i></a></li>
             </ul>
           </div><a class="alx-burger" href="#"><span></span></a>
         </div>
@@ -48,8 +48,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <div class="alx-heading alx-text-center">
-                  <h1 class="alx-heading__title">علی سلیمانی</h1>
-                  <div class="alx-heading__pretitle"><i class="fa fa-camera-retro"></i>توسعه دهنده / وبمستر / وبلاگ نویس</div>
+                  <h1 class="alx-heading__title">دکتر سارا تفاخ</h1>
+                  <div class="alx-heading__pretitle"><i class="fa  fa-stethoscope  "></i>روان درمانگر / طرحواره درمانگر </div>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
                       <g>
