--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="libs/pagePiling/jquery.pagepiling.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="css/rtl.css">
-    <title>Gnusmas - Agency, Corporate, Studio Minamal Landing Page</title>
+    <title>صفحه شخصی خانم دکتر سارا تفاخ</title>
     <meta name="description" content="">
   </head>
   <body>
@@ -561,20 +561,20 @@
                   <div class="alx-icon__icon"><span><i class="fa fa-phone"></i></span></div>
                   <div class="alx-icon__text">
                     <h5>تماس با من در هر زمان</h5>
-                    <p>+754-554-54-34</p>
+                    <p>0903-391-3261</p>
                   </div>
                 </div>
                 <div class="alx-icon">
                   <div class="alx-icon__icon"><span><i class="fa fa-envelope"></i></span></div>
                   <div class="alx-icon__text">
-                    <h5>ایمیل من</h5><a href="mailto:brainiaktheme@gmail.com">Office@domian.com</a>
+                    <h5>ایمیل من</h5><a href="mailto:sara.tafakh@gmail.com">sara.tafakh@gmail.com</a>
                   </div>
                 </div>
                 <div class="alx-icon">
                   <div class="alx-icon__icon"><span><i class="fa fa-home"></i></span></div>
                   <div class="alx-icon__text">
                     <h5>آدرس</h5>
-                    <p>ایران، استان خراسان رضوی</p>
+                    <p>ایران، استان مازندران، محمود آباد، ساختمان پزشکان سینا، کلینیک دریا</p>
                   </div>
                 </div>
               </div>
@@ -607,15 +607,9 @@
           </div>
         </section>
       </div>
-      <div class="alx-lang-change">
-        <ul>
-          <li class="current-lang"><a href="#">فارسی</a></li>
-          <li><a href="#">EN</a></li>
-          <li><a href="#">Rus</a></li>
-        </ul>
-      </div>
+      
       <div class="alx-copyright">
-        <p><span>©</span>Gnusmas 2019</p>
+        Design By <a href="tel:00989396163750">Alireza Kiani</a>
       </div>
     </div>
     <!--Content END-->
@@ -646,13 +640,11 @@
       </div>
       <div class="alx-social-links__2">
         <ul>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-        </ul>
+          <li><a href="https://www.instagram.com/mindfulness_withsara/"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="tel:00989033913261"><i class="fa fa-mobile"></i></a></li>
+          <li><a href="mailto:sara.tafakh@gmail.com"><i class="fa fa-inbox"></i></a></li>
+    </ul>
       </div>
-      <div class="alx-copyright">© 1WebStar 2019. تمامی حقوق محفوظ است<br>طراحی و توسعه توسط<a href="https://1webstar.ir" target="blanc"> <strong> تک ستاره وب</strong></a></div>
     </aside>
     <div class="alx-aside-sidebar__overlay"></div>
     <!--Libs-->
