connection way added

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
                 <div class="alx-heading">
-                  <div class="alx-heading__pretitle"><i class="fa fa-diamond"></i>تخصص های من</div>
-                  <h2 class="alx-heading__title">بهترین خدمات من</h2>
+                  <h2 class="alx-heading__title">راه های ارتباطی با  من</h2>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
                       <g>
@@ -106,86 +105,49 @@
                     </svg>
                   </div>
                   <div class="alx-heading__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</div>
-                </div><a class="alx-btn" href="#page9">شروع یک پروژه</a>
+                </div>
               </div>
               <div class="col-lg-6 offset-lg-1">
                 <div class="alx-services alx-dots-style" data-interval="7000">
                   <div class="alx-services__container">
                     <div class="alx-services__item">
                       <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-film"></i>
-                          <h4 class="alx-services__item__title">ویرایش ویدیو</h4>
+                        <div class="alx-services__item__main"><i class="fa fa-globe"></i>
+                          <h4 class="alx-services__item__title">سایت پزشکت</h4>
                         </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-film"></i></div>
+                        <div class="alx-services__item__description"> در این سایت می توانید با ثبت نام و تشکیل پرونده با من در ارتباط باشید <br><a href="https://pezeshket.com/">pezeshket.com</a></div>
+                        <div class="alx-services__item__opacityicon"><i class="fa fa-globe"></i></div>
                       </div>
                     </div>
                     <div class="alx-services__item">
                       <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-camera-retro"></i>
-                          <h4 class="alx-services__item__title">عکاس</h4>
+                        <div class="alx-services__item__main"><i class="fa fa-car"></i>
+                          <h4 class="alx-services__item__title">مراجعه حضوری</h4>
                         </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-camera-retro"></i></div>
+                        <div class="alx-services__item__description">در تمام روزهای کاری هفته می توانید وقت رزرو کنید<br>محمد آباد باران ۲ کلینیک دریا<br><a href="tel:00981144734086">00981144734086</a> </div>
+                        <div class="alx-services__item__opacityicon"><i class="fa fa-car"></i></div>
                       </div>
                     </div>
                     <div class="alx-services__item">
                       <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-diamond"></i>
-                          <h4 class="alx-services__item__title">طراح</h4>
+                        <div class="alx-services__item__main"><i class="fa fa-mobile"></i>
+                          <h4 class="alx-services__item__title">تماس تلفنی</h4>
                         </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-diamond"></i></div>
+                        <div class="alx-services__item__description">این تلفن من هست، در ۲۴ ساعت وقتی حس خوب یا بدی داری با من تماس بگیر<br><a href="tel:00989033913261">00989033913261</a> </div>
+                        <div class="alx-services__item__opacityicon"><i class="fa fa-mobile"></i></div>
                       </div>
                     </div>
                     <div class="alx-services__item">
                       <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-feed"></i>
-                          <h4 class="alx-services__item__title">مدیریت</h4>
+                        <div class="alx-services__item__main"><i class="fa  fa-whatsapp "></i>
+                          <h4 class="alx-services__item__title">پیام واتس آپ</h4>
                         </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-feed"></i></div>
+                        <div class="alx-services__item__description">دیگه از این کم هزینه تر داریم؟ <br><a href="https://wa.me/989033913261">989033913261</a></div>
+                        <div class="alx-services__item__opacityicon"><i class="fa  fa-whatsapp "></i></div>
                       </div>
                     </div>
                   </div>
-                  <div class="alx-services__container">
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-wordpress"></i>
-                          <h4 class="alx-services__item__title">وردپرس</h4>
-                        </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-wordpress"></i></div>
-                      </div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-css3"></i>
-                          <h4 class="alx-services__item__title">CSS&HTML</h4>
-                        </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-css3"></i></div>
-                      </div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-opencart"></i>
-                          <h4 class="alx-services__item__title">اپن کارت</h4>
-                        </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-opencart"></i></div>
-                      </div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap">
-                        <div class="alx-services__item__main"><i class="fa fa-connectdevelop"></i>
-                          <h4 class="alx-services__item__title">پشتیبانی</h4>
-                        </div>
-                        <div class="alx-services__item__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. </div>
-                        <div class="alx-services__item__opacityicon"><i class="fa fa-connectdevelop"></i></div>
-                      </div>
-                    </div>
-                  </div>
+ 
                 </div>
               </div>
             </div>
@@ -481,7 +443,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
                 <div class="alx-heading">
-                  <h2 class="alx-heading__title">مشتریان من</h2>
+                  <h2 class="alx-heading__title">مشتریان</h2>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
                       <g>
