first text added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
                       </g>
                     </svg>
                   </div>
-                  <div class="alx-heading__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+                  <div class="alx-heading__description"> 
+                    من کارشناس ارشد روانشناسی بالینی هستم. 
+                    عضو رسمی سازمان نظام روانشناس و این هم  شماره ۳۳۰۷۰ من هست.
+                    رواشناس و مشاور خانواده ،فرد، کودک 
+                    با رویکرد طرحواره درمانی و cbt
+                     در زمینه های زوج درمانی شناختی  ، درمان های روان تحلیلی ، درمان شناختی -رفتاری اختلالات شخصیت فعال هستم</div>
                 </div>
                 <div class="alx-btns-section alx-text-center"><a class="alx-btn" href="#page6">نمونه کارهای من</a></div>
               </div>
@@ -224,7 +229,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-5">
                 <div class="alx-heading">
-                  <div class="alx-heading__pretitle"><i class="fa fa-money"></i>نرخ بازای ه3 ساعت فقط 25 هزار تومان</div>
+                  <div class="alx-heading__pretitle"><i class="fa fa-money"></i>بد نیست هزینه ها رو هم بدونی</div>
                   <h2 class="alx-heading__title">قیمت</h2>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
@@ -235,49 +240,23 @@
                   </div>
                 </div>
                 <div class="alx-price">
-                  <div class="alx-price__title">طراحی وب سایت</div>
+                  <div class="alx-price__title">مشاوره حضوری ۴۵ دقیقه ای</div>
                   <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
+                    <p>۲۳۰/۰۰۰ ت</p>
                   </div>
                 </div>
-                <div class="alx-price">
-                  <div class="alx-price__title">طراحی وب سایت شرکتی</div>
-                  <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
-                  </div>
-                </div>
-                <div class="alx-price">
-                  <div class="alx-price__title">طراحی وب سایت خدماتی</div>
-                  <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
-                  </div>
-                </div>
+ 
+ 
               </div>
               <div class="col-lg-5 offset-lg-2 align-self-end">
                 <div class="alx-price">
-                  <div class="alx-price__title">طراحی وب سایت فروشگاهی</div>
+                  <div class="alx-price__title">مشاوره تلفنی ۴۶ دقیقه ای</div>
                   <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
+                    <p>۲۰۰/۰۰۰ ت</p>
                   </div>
                 </div>
-                <div class="alx-price">
-                  <div class="alx-price__title">طراحی وب سایت های شخصی</div>
-                  <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
-                  </div>
-                </div>
-                <div class="alx-price">
-                  <div class="alx-price__title">طراحی صفحه اصلی</div>
-                  <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
-                  </div>
-                </div>
-                <div class="alx-price">
-                  <div class="alx-price__title">طراحی صفحات داخلی</div>
-                  <div class="alx-price__price"><span>از</span>
-                    <p>900/000 ت</p>
-                  </div>
-                </div>
+
+ 
               </div>
             </div>
           </div>
