comminucate text updated

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                       </g>
                     </svg>
                   </div>
-                  <div class="alx-heading__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد</div>
+                  <div class="alx-heading__description">اگر دوست داری با من ارتباط بگیری و از مشاوره من استفاده کنی این راه های  ار با من هست </div>
                 </div>
               </div>
               <div class="col-lg-6 offset-lg-1">
