--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
                     با رویکرد طرحواره درمانی و cbt
                      در زمینه های زوج درمانی شناختی  ، درمان های روان تحلیلی ، درمان شناختی -رفتاری اختلالات شخصیت فعال هستم</div>
                 </div>
-                <div class="alx-btns-section alx-text-center"><a class="alx-btn" href="#page6">نمونه کارهای من</a></div>
               </div>
               <div class="col-lg-6 offset-lg-1"></div>
             </div>
@@ -91,7 +90,6 @@
                   </div>
                   <div class="alx-heading__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. </div>
                   <div class="alx-heading__pretitle alx-style" data-style="margin-top: 20px"><i class="fa fa-diamond"></i>کارهای با کیفیت بالا و استاندارد های جهانی</div>
-                </div><a class="alx-btn alx-btn-primary" href="#page9">مشتری من شو !</a>
               </div>
             </div>
           </div>
@@ -109,7 +107,7 @@
                       </g>
                     </svg>
                   </div>
-                  <div class="alx-heading__description">اگر دوست داری با من ارتباط بگیری و از مشاوره من استفاده کنی این راه های  ار با من هست </div>
+                  <div class="alx-heading__description">اگر دوست داری با من ارتباط بگیری و از مشاوره من استفاده کنی این راه های  ارتباط با من هست </div>
                 </div>
               </div>
               <div class="col-lg-6 offset-lg-1">
@@ -554,22 +552,16 @@
     </div>
     <!--Content END-->
     <aside class="alx-aside-sidebar alx-aside-sidebar__dark alx-bg-img" id="alx-sidebar" data-image="images/bg2_blur.jpg">
-      <div class="alx-lang-change">
-        <ul>
-          <li class="current-lang"><a href="#">فارسی</a></li>
-          <li><a href="index-en.html">EN</a></li>
-        </ul>
-      </div><a class="alx-burger alx-burger__open" href="#"><span></span></a>
+      <a class="alx-burger alx-burger__open" href="#"><span></span></a>
       <div class="alx-sidebar-widget">
-        <h5>سلام!</h5><img class="img-responsive" src="images/person.jpg" alt="">
-        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
+        <h5>سلام من سارا هستم!</h5><img class="img-responsive" src="images/person.jpg" alt="">
       </div>
       <hr>
       <div class="alx-sidebar-menu">
         <ul>
           <li><a href="#page1">صفحه اصلی</a></li>
           <li><a href="#page2">درباره</a></li>
-          <li><a href="#page3">خدمات</a></li>
+          <li><a href="#page3">راه های ارتباطی با من</a></li>
           <li><a href="#page4">مهارت ها</a></li>
           <li><a href="#page5">قیمت ها</a></li>
           <li><a href="#page6">نمونه کارها</a></li>
