a page deleted and about me edited

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                       </g>
                     </svg>
                   </div>
-                  <div class="alx-heading__description">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. </div>
-                  <div class="alx-heading__pretitle alx-style" data-style="margin-top: 20px"><i class="fa fa-diamond"></i>کارهای با کیفیت بالا و استاندارد های جهانی</div>
+                  <div class="alx-heading__description">من به عنوان یک دوست می خوام با خودت و دنیای اطرافت بیشتر آشنا بشی </div>
+                  <div class="alx-heading__pretitle alx-style" data-style="margin-top: 20px"><i class="fa fa-heart"></i>رواشناس یک دوست صمیمی است</div>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
             <div class="row align-items-center">
               <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
                 <div class="alx-heading">
-                  <h2 class="alx-heading__title">راه های ارتباطی با  من</h2>
+                  <h2 class="alx-heading__title">راه های ارتباطی با من</h2>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
                       <g>
@@ -414,69 +414,6 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle alx-dark-section pp-scrollable alx-bg-img" data-image="images/bgd5.jpg">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
-                <div class="alx-heading">
-                  <h2 class="alx-heading__title">مشتریان</h2>
-                  <div class="alx-heading__zigzag">
-                    <svg x="0px" y="0px" viewBox="0 0 100 19.5">
-                      <g>
-                        <polygon points="79.3,18 69.6,8.3 60,18 50.3,8.3 40.6,18 31,8.3 21.3,18 11.7,8.3 3.4,16.5 0.6,13.7 11.7,2.7 21.3,12.3 31,2.7 								40.6,12.3 50.3,2.7 60,12.3 69.6,2.7 79.3,12.3 88.9,2.7 100,13.6 97.2,16.4 89,8.3 "></polygon>
-                      </g>
-                    </svg>
-                  </div>
-                  <div class="alx-heading__description">من از هر فرصتی برای ایجاد مشارکت تجاری بلند مدت با شرکت هایی که در بخش خود رهبر هستند استفاده می کنم. من به منظور ارائه بهترین راه حل های موجود به مشتریان ، من با شرکای شبکه خود از نزدیک همکاری می کنم.</div>
-                </div><a class="alx-btn alx-btn-primary" href="#">مشتری من شو</a>
-              </div>
-              <div class="col-lg-6 offset-lg-1">
-                <div class="alx-services alx-services__partners alx-dots-style" data-interval="7000">
-                  <div class="alx-services__container">
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner2.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner3.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner4.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner5.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner6.png" alt=""></div>
-                    </div>
-                  </div>
-                  <div class="alx-services__container">
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner6.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner2.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner4.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner5.png" alt=""></div>
-                    </div>
-                    <div class="alx-services__item">
-                      <div class="alx-services__item__wrap"><img src="images/partner3.png" alt=""></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
         <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bgl5.jpg">
           <div class="container">
             <div class="row align-items-center">
@@ -566,7 +503,6 @@
           <li><a href="#page5">قیمت ها</a></li>
           <li><a href="#page6">نمونه کارها</a></li>
           <li><a href="#page7">نظرات</a></li>
-          <li><a href="#page8">مشتریان</a></li>
           <li><a href="#page9">تماس</a></li>
         </ul>
       </div>
