photos added and comments added

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="alx-right-wrap">
           <div class="alx-social-links">
             <ul>
-              <li><a href="https://www.instagram.com/mindfulness_withsara/"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="tel:00989033913261"><i class="fa fa-mobile"></i></a></li>
-              <li><a href="mailto:sara.tafakh@gmail.com"><i class="fa fa-inbox"></i></a></li>
+              <li><a href="https://www.instagram.com/mindfulness_withsara/"><i class="fa fa-instagram fa-xl" title="ایت"></i></a></li>
+              <li><a href="tel:00989033913261"><i class="fa fa-mobile fa-xl"></i></a></li>
+              <li ><a  href="mailto:sara.tafakh@gmail.com"><i class="fa fa-inbox fa-xl fa-hover-show" ></i></a></li>
             </ul>
           </div><a class="alx-burger" href="#"><span></span></a>
         </div>
@@ -118,7 +118,7 @@
                         <div class="alx-services__item__main"><i class="fa fa-globe"></i>
                           <h4 class="alx-services__item__title">سایت پزشکت</h4>
                         </div>
-                        <div class="alx-services__item__description"> در این سایت می توانید با ثبت نام و تشکیل پرونده با من در ارتباط باشید <br><a href="https://pezeshket.com/">pezeshket.com</a></div>
+                        <div class="alx-services__item__description"> در این سایت می توانید با ثبت نام و تشکیل پرونده با من در ارتباط باشید <br><a target="_blank" href="https://advisers.pezeshket.com/consultants/%D8%B3%D8%A7%D8%B1%D8%A7-%D8%AA%D9%81%D8%A7%D8%AE">pezeshket.com</a></div>
                         <div class="alx-services__item__opacityicon"><i class="fa fa-globe"></i></div>
                       </div>
                     </div>
@@ -151,72 +151,6 @@
                     </div>
                   </div>
  
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bgd3.jpg">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
-                <div class="alx-heading">
-                  <h2 class="alx-heading__title">مهارت های من</h2>
-                  <div class="alx-heading__zigzag">
-                    <svg x="0px" y="0px" viewBox="0 0 100 19.5">
-                      <g>
-                        <polygon points="79.3,18 69.6,8.3 60,18 50.3,8.3 40.6,18 31,8.3 21.3,18 11.7,8.3 3.4,16.5 0.6,13.7 11.7,2.7 21.3,12.3 31,2.7 								40.6,12.3 50.3,2.7 60,12.3 69.6,2.7 79.3,12.3 88.9,2.7 100,13.6 97.2,16.4 89,8.3 "></polygon>
-                      </g>
-                    </svg>
-                  </div>
-                  <div class="alx-heading__description">من کارم را خوب و به موقع انجام می دهم - این اصل غیرقابل انکار، مهمتر از آن است که حتی نمی تواند پول باشد.<br><strong>فقط نمونه کارها من را بررسی کنید و بیایید با هم کار کنیم!</strong></div>
-                </div>
-                <div class="alx-skills-list">
-                  <ul>
-                    <li><span>01</span>طراحی وب سایت با وردپرس</li>
-                    <li><span>02</span>طراحی لندینگ پیج</li>
-                    <li><span>03</span>بهینه سازی سئو</li>
-                    <li><span>04</span>طراحی رسپانسیو</li>
-                    <li><span>05</span>طراحی صفحات اصلی</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-5 offset-lg-2 align-self-center">
-                <div class="alx-skills">
-                  <div class="alx-skills__header">
-                    <div class="alx-skills__title">لوگو / برندسازی</div>
-                    <div class="alx-skills__count">80%</div>
-                  </div>
-                  <div class="alx-skills__body">
-                    <div class="alx-skills__bar" data-skills="80%"></div>
-                  </div>
-                </div>
-                <div class="alx-skills">
-                  <div class="alx-skills__header">
-                    <div class="alx-skills__title">کدنویسی</div>
-                    <div class="alx-skills__count">90%</div>
-                  </div>
-                  <div class="alx-skills__body">
-                    <div class="alx-skills__bar" data-skills="90%"></div>
-                  </div>
-                </div>
-                <div class="alx-skills">
-                  <div class="alx-skills__header">
-                    <div class="alx-skills__title">وردپرس</div>
-                    <div class="alx-skills__count">70%</div>
-                  </div>
-                  <div class="alx-skills__body">
-                    <div class="alx-skills__bar" data-skills="70%"></div>
-                  </div>
-                </div>
-                <div class="alx-skills">
-                  <div class="alx-skills__header">
-                    <div class="alx-skills__title">HTML5 / CSS3</div>
-                    <div class="alx-skills__count">60%</div>
-                  </div>
-                  <div class="alx-skills__body">
-                    <div class="alx-skills__bar" data-skills="60%"></div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -260,105 +194,49 @@
         </section>
         <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bgd3.jpg">
           <div class="container">
-            <div class="col-lg-12">
-              <ul class="alx-portfolio-control alx-portfolio__nav alx-text-left">
-                <li class="alx-active" data-filter="*">همه</li>
-                <li data-filter=".alx-f-branding">برندسازی</li>
-                <li data-filter=".alx-f-web">وب</li>
-                <li data-filter=".alx-f-graphic">گرافیک</li>
-                <li data-filter=".alx-f-logo">لوگو</li>
-                <li data-filter=".alx-f-photography"> عکاسی</li>
-              </ul>
-            </div>
+
             <div class="alx-portfolio-items alx-layout-isotope alx-isotope-gap" data-grid="4">
               <div class="alx-isotope-item alx-f-branding alx-f-photography">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/1.jpg"></a>
+                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/1.gif"></a>
                   <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/1.jpg"></div>
+                    <div class="alx-bg-img" data-image="images/portfolio/1g.jpg"></div>
                   </div>
                   <div class="alx-portfolio-item-details">
-                    <h4>طراحی وبسایت خلاقانه</h4>
-                    <p>خلاقانه</p>
+                    <h4>سمینار قبلی</h4>
                   </div>
                 </div>
               </div>
               <div class="alx-isotope-item alx-f-graphic">
                 <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/2.jpg"></a>
                   <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/2.jpg"></div>
+                    <div class="alx-bg-img" data-image="images/portfolio/2g.jpg"></div>
                   </div>
                   <div class="alx-portfolio-item-details">
-                    <h4>طراحی سایت جدید</h4>
-                    <p>خلاقانه</p>
+                    <h4>سمینار قبلی</h4>
                   </div>
                 </div>
               </div>
               <div class="alx-isotope-item alx-f-web">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/3.jpg"></a>
+                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/4.jpg"></a>
                   <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/3.jpg"></div>
+                    <div class="alx-bg-img" data-image="images/portfolio/4g.jpg"></div>
                   </div>
                   <div class="alx-portfolio-item-details">
-                    <h4>لوگو آرایشگاه</h4>
-                    <p>خلاقانه</p>
+                    <h4>سمینار قبلی</h4>
                   </div>
                 </div>
               </div>
               <div class="alx-isotope-item alx-f-logo alx-f-photography">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/4.jpg"></a>
+                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/3.jpg"></a>
                   <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/3.jpg"></div>
+                    <div class="alx-bg-img" data-image="images/portfolio/3g.jpg"></div>
                   </div>
                   <div class="alx-portfolio-item-details">
-                    <h4>طراحی سایت جدید</h4>
-                    <p>خلاقانه</p>
+                    <h4>سمینار قبلی</h4>
                   </div>
                 </div>
               </div>
-              <div class="alx-isotope-item alx-f-branding">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/5.jpg"></a>
-                  <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/5.jpg"></div>
-                  </div>
-                  <div class="alx-portfolio-item-details">
-                    <h4>منحنی ساده</h4>
-                    <p>خلاقانه</p>
-                  </div>
-                </div>
-              </div>
-              <div class="alx-isotope-item alx-f-web">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/6.jpg"></a>
-                  <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/6.jpg"></div>
-                  </div>
-                  <div class="alx-portfolio-item-details">
-                    <h4>رویکرد مدرن</h4>
-                    <p>خلاقانه</p>
-                  </div>
-                </div>
-              </div>
-              <div class="alx-isotope-item alx-f-branding">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/7.jpg"></a>
-                  <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/7.jpg"></div>
-                  </div>
-                  <div class="alx-portfolio-item-details">
-                    <h4>برش جدید</h4>
-                    <p>خلاقانه</p>
-                  </div>
-                </div>
-              </div>
-              <div class="alx-isotope-item alx-f-graphic alx-f-web alx-f-photography">
-                <div class="alx-portfolio-item alx-portfolio-item__style1"><a class="alx-img-gallery" href="images/portfolio/8.jpg"></a>
-                  <div class="alx-portfolio-item-image">
-                    <div class="alx-bg-img" data-image="images/portfolio/8.jpg"></div>
-                  </div>
-                  <div class="alx-portfolio-item-details">
-                    <h4>وب سایت جذاب</h4>
-                    <p>خلاقانه</p>
-                  </div>
-                </div>
-              </div>
+ 
             </div>
           </div>
         </section>
@@ -381,23 +259,23 @@
                 <div class="alx-testimonials__slides">
                   <div class="alx-testimonials__item"><img src="images/review1.jpg" alt="">
                     <div class="alx-testimonials__content">
-                      <div class="alx-testimonials__item__review"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></div>
-                      <div class="alx-testimonials__item__name">نازنین رافعی</div>
-                      <div class="alx-testimonials__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+                      <div class="alx-testimonials__item__review"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
+                      <div class="alx-testimonials__item__name">نوید</div>
+                      <div class="alx-testimonials__item__text">ده سال با روانشناس های متعدد صحبت کردم.ولی هیچکدوم مثل خانم تفاخ نبودن.بهترین هستند</div>
                     </div>
                   </div>
-                  <div class="alx-testimonials__item"><img src="images/review2.jpg" alt="">
+                  <div class="alx-testimonials__item"><img src="images/review1.jpg" alt="">
                     <div class="alx-testimonials__content">
                       <div class="alx-testimonials__item__review"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
-                      <div class="alx-testimonials__item__name">معین زارع</div>
-                      <div class="alx-testimonials__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+                      <div class="alx-testimonials__item__name">Fateme.bph </div>
+                      <div class="alx-testimonials__item__text">خیلی با حوصله و با دقت گوش میکنن و راهنمایی میکنن و با تجربن و حرف زدن باهاشون باعث آرامش میشه</div>
                     </div>
                   </div>
-                  <div class="alx-testimonials__item"><img src="images/review3.jpg" alt="">
+                  <div class="alx-testimonials__item"><img src="images/review1.jpg" alt="">
                     <div class="alx-testimonials__content">
                       <div class="alx-testimonials__item__review"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i></div>
-                      <div class="alx-testimonials__item__name">آرش خادم</div>
-                      <div class="alx-testimonials__item__text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</div>
+                      <div class="alx-testimonials__item__name">Mohammad</div>
+                      <div class="alx-testimonials__item__text">خیلی خوب بودن خانم دکتر. <br>ازشون تشکر میکنم که با حوصله راهنمایی کردن</div>
                     </div>
                   </div>
                 </div>
@@ -491,7 +369,7 @@
     <aside class="alx-aside-sidebar alx-aside-sidebar__dark alx-bg-img" id="alx-sidebar" data-image="images/bg2_blur.jpg">
       <a class="alx-burger alx-burger__open" href="#"><span></span></a>
       <div class="alx-sidebar-widget">
-        <h5>سلام من سارا هستم!</h5><img class="img-responsive" src="images/person.jpg" alt="">
+        <h5>سلام من سارا هستم!</h5><img class="img-responsive" src="images/person2.jpg" alt="">
       </div>
       <hr>
       <div class="alx-sidebar-menu">
@@ -499,9 +377,8 @@
           <li><a href="#page1">صفحه اصلی</a></li>
           <li><a href="#page2">درباره</a></li>
           <li><a href="#page3">راه های ارتباطی با من</a></li>
-          <li><a href="#page4">مهارت ها</a></li>
           <li><a href="#page5">قیمت ها</a></li>
-          <li><a href="#page6">نمونه کارها</a></li>
+          <li><a href="#page6">گالاری</a></li>
           <li><a href="#page7">نظرات</a></li>
           <li><a href="#page9">تماس</a></li>
         </ul>
